force-app/main/default/objects/User_Preference__c/User_Preference__c.object-meta.xml
<CustomObject>
    <label>User Preference</label>
    <nameField>
        <displayFormat>UP-{00000}</displayFormat>
        <label>Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>