force-app/main/default/objects/User_Preference__c/fields/Profile_Version__c.field-meta.xml
<CustomField>
    <fullName>Profile_Version__c</fullName>
    <label>Profile Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>