force-app/main/default/objects/User_Preference__c/fields/Taste_Profile__c.field-meta.xml
<CustomField>
    <fullName>Taste_Profile__c</fullName>
    <label>Taste Profile</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>